--- a/client/src/css/shopnav.css
+++ b/client/src/css/shopnav.css
@@ -1,17 +1,19 @@
+
 .ShopNav-navbar {
-    display: flex;
-    justify-content: center; 
-    align-items: center; 
-    background-color: hsla(0, 0%, 82%, 0.593);
-    color: black;
-    width: 100vw;
-    padding: 15px 20px;
-    position: relative;
-    position: sticky;
-    overflow: hidden;
-    top: 0;
-    z-index: 1000;
-  }
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+  background-color: white;
+  color: black;
+  width: 100%;
+  padding: 15px 20px;
+  position: sticky !important;
+  overflow: hidden;
+  top: 0;
+  z-index: 9999; 
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
   
   .logo {
     font-size: 24px;
