--- a/client/src/css/footer.css
+++ b/client/src/css/footer.css
@@ -1,5 +1,5 @@
 .site-footer {
-    background-color: #f8f8f8;
+    background-color: hsla(0, 1%, 83%, 0.356);
     color: #333;
     padding: 40px 20px;
   }
@@ -32,6 +32,8 @@
     font-size: 16px;
     font-weight: bold;
     margin-bottom: 10px;
+    text-align: center;
+
   }
   
   .footer-links {
@@ -41,6 +43,11 @@
   
   .footer-links li {
     margin-bottom: 8px;
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+    text-align: center;
+    justify-content: center;
   }
   
   .footer-links a {
